{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 103,
  "lineage": "47075f9b-d04b-ce40-749d-1a7fed79b84f",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b799c439fd5516a",
            "arn": "arn:aws:ec2:us-east-1:941434651743:instance/i-08992f11e9466c2cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08992f11e9466c2cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00a3bfceb9cff9255",
            "private_dns": "ip-10-1-1-229.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.229",
            "public_dns": "ec2-3-85-240-18.compute-1.amazonaws.com",
            "public_ip": "3.85.240.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "IAC": "Terraform",
                  "IAC_Version": "1.3.6",
                  "cloud": "aws",
                  "env": "dev",
                  "owner": "mvizuete",
                  "project": "aws_security_01",
                  "region": "virginia"
                },
                "throughput": 125,
                "volume_id": "vol-0ac3fc9644e2644bd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09cef2e152fcbeb8a",
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03624bc569e7d0683"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_key_pair.key",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:internet-gateway/igw-03715c1d0bdc522ae",
            "id": "igw-03715c1d0bdc522ae",
            "owner_id": "941434651743",
            "tags": {
              "Name": "igw_vpc-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "igw_vpc-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "vpc_id": "vpc-0e53fb89f349de9a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:route-table/rtb-0ed46657874a41f11",
            "id": "rtb-0ed46657874a41f11",
            "owner_id": "941434651743",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03715c1d0bdc522ae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_crt-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Public_crt-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e53fb89f349de9a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e15796a1c7ca83a0",
            "route_table_id": "rtb-0ed46657874a41f11",
            "subnet_id": "subnet-09cef2e152fcbeb8a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_crt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group/sg-08d3abf2d54340ef0",
            "description": "Private Subnet Security Group",
            "egress": [],
            "id": "sg-08d3abf2d54340ef0",
            "ingress": [],
            "name": "Public Private SG-aws_security_01-dev-virginia",
            "name_prefix": "",
            "owner_id": "941434651743",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private Subnet SG-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Private Subnet SG-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e53fb89f349de9a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group/sg-0e7d5d0aca2a491f4",
            "description": "Public Subnet Security Group",
            "egress": [],
            "id": "sg-0e7d5d0aca2a491f4",
            "ingress": [],
            "name": "Public Subnet SG-aws_security_01-dev-virginia",
            "name_prefix": "",
            "owner_id": "941434651743",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Subnet SG-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Public Subnet SG-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e53fb89f349de9a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:subnet/subnet-0b99f9a0b53cdb0cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b99f9a0b53cdb0cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941434651743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Private_Subnet-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "vpc_id": "vpc-0e53fb89f349de9a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:subnet/subnet-09cef2e152fcbeb8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cef2e152fcbeb8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941434651743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Public_Subnet-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "vpc_id": "vpc-0e53fb89f349de9a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:vpc/vpc-0e53fb89f349de9a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-06052861c98430d13",
            "default_route_table_id": "rtb-0ea67dba136dd8163",
            "default_security_group_id": "sg-03624bc569e7d0683",
            "dhcp_options_id": "dopt-072044fe87e8f819f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e53fb89f349de9a9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea67dba136dd8163",
            "owner_id": "941434651743",
            "tags": {
              "Name": "VPC-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "VPC-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_egress_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group-rule/sgr-0199505771ea21aee",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0199505771ea21aee",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e7d5d0aca2a491f4",
            "security_group_rule_id": "sgr-0199505771ea21aee",
            "tags": {
              "Name": "Allow all ipv4 traffic to every whare egress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Allow all ipv4 traffic to every whare egress rule-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.sg_public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_to_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group-rule/sgr-0928af1df78207a70",
            "cidr_ipv4": "10.1.1.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0928af1df78207a70",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08d3abf2d54340ef0",
            "security_group_rule_id": "sgr-0928af1df78207a70",
            "tags": {
              "Name": "Allow all traffic from public subnet egress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Allow all traffic from public subnet egress rule-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.sg_private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_ingress_traffic_in_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group-rule/sgr-0ab6b941f164ea458",
            "cidr_ipv4": "10.1.2.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ab6b941f164ea458",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e7d5d0aca2a491f4",
            "security_group_rule_id": "sgr-0ab6b941f164ea458",
            "tags": {
              "Name": "Allow all ipv4 traffic from private subnet ingress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Allow all ipv4 traffic from private subnet ingress rule-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.sg_public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic_from_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group-rule/sgr-080fad97eaf2b12df",
            "cidr_ipv4": "10.1.1.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-080fad97eaf2b12df",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08d3abf2d54340ef0",
            "security_group_rule_id": "sgr-080fad97eaf2b12df",
            "tags": {
              "Name": "Allow all traffic from public subnet ingress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Allow all traffic from public subnet ingress rule-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.sg_private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ingress_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941434651743:security-group-rule/sgr-01299daf437a9500b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-01299daf437a9500b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e7d5d0aca2a491f4",
            "security_group_rule_id": "sgr-01299daf437a9500b",
            "tags": {
              "Name": "Allow SSH traffic from sg_ingress_cidr ingress rule-aws_security_01-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Allow SSH traffic from sg_ingress_cidr ingress rule-aws_security_01-dev-virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "mvizuete",
              "project": "aws_security_01",
              "region": "virginia"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.sg_public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}